V03 - seznam kategorií, seznam měřáků, seznam tylů měřáků

--- a/DaPeWeb.csproj
+++ b/DaPeWeb.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\DaPe.DataAccess\DaPe.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
