--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server = DAN-NTB\\SQLEXPRESS;Database=DaPe;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server = (localdb)\\MSSQLLocalDB;Database=DaPe;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
