V10migrace na nový NTB

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server = (localdb)\\MSSQLLocalDB;Database=DaPe;Trusted_Connection=True;TrustServerCertificate=True"
+  "DefaultConnection": "Server = BPV-NBPETRIK01\\SQLEXPRESS;Database=Dape;Trusted_Connection=True;TrustServerCertificate=True"}
+
+/*
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = db.dw173.webglobe.com;Database=dape_group;Trusted_Connection=True;TrustServerCertificate=True;User ID=sa;Password=H3slo123"
   }
+  */
 }
