--- a/DaPeWeb.csproj
+++ b/DaPeWeb.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\product\" />
+    <None Include="node_modules/**" />
   </ItemGroup>
 
 </Project>
