--- a/appsettings.json
+++ b/appsettings.json
@@ -6,13 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-
   "ConnectionStrings": {
-  "DefaultConnection": "Server = BPV-NBPETRIK01\\SQLEXPRESS;Database=Dape;Trusted_Connection=True;TrustServerCertificate=True"}
-
-/*
-  "ConnectionStrings": {
-    "DefaultConnection": "Server = db.dw173.webglobe.com;Database=dape_group;Trusted_Connection=True;TrustServerCertificate=True;User ID=sa;Password=H3slo123"
+    "DefaultConnection": "Server = BPV-NBPETRIK01\\SQLEXPRESS;Database=Dape;Trusted_Connection=True;TrustServerCertificate=True",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DaPeWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
-  */
 }
