V13 - po přidání poli do profilu uživatele, nicméně nefunkční

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server = BPV-NBPETRIK01\\SQLEXPRESS;Database=Dape;Trusted_Connection=True;TrustServerCertificate=True",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DaPeWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server = BPV-NBPETRIK01\\SQLEXPRESS;Database=Dape;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
